unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/Off_Platform_Accelerate_Project__c.object-meta.xml
<CustomObject>
    <label>Off-Platform Accelerate Project</label>
    <nameField>
        <label>Homeowner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Off-Platform Accelerate Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>