unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <label>Ageing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>