unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Amount_Paid_by_Financier__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Financier__c</fullName>
    <label>Amount Paid by Financier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>