unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/AR_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Requested_Date__c</fullName>
    <label>AR  Requested Date</label>
    <type>Date</type>
</CustomField>