unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Build_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Name__c</fullName>
    <label>Build Partner Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>