unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Current_AR_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_AR_Balance__c</fullName>
    <label>Current AR Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>