unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Finance_Funding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Finance_Funding_Stage__c</fullName>
    <label>Finance Funding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1 - Funded</fullName>
            </value>
            <value>
                <fullName>M2 - Outstanding</fullName>
            </value>
            <value>
                <fullName>Open Stips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>