unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <label>Financier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>