unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/HIC_Notes__c.field-meta.xml
<CustomField>
    <fullName>HIC_Notes__c</fullName>
    <label>HIC Notes</label>
    <type>TextArea</type>
</CustomField>