unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Install_Contract_License_Entity__c.field-meta.xml
<CustomField>
    <fullName>Install_Contract_License_Entity__c</fullName>
    <label>Install Contract License Entity</label>
    <length>60</length>
    <type>Text</type>
</CustomField>