unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Is_HIC_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_HIC_Valid__c</fullName>
    <label>Is HIC Valid?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>