unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Loan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loan_Notes__c</fullName>
    <label>Loan Notes</label>
    <type>TextArea</type>
</CustomField>