unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>