unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/of_Projects_vetted__c.field-meta.xml
<CustomField>
    <fullName>of_Projects_vetted__c</fullName>
    <label># of Projects vetted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>