unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Palmetto_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Funding_Date__c</fullName>
    <label>Palmetto Funding Date</label>
    <type>Date</type>
</CustomField>