unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>