unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Requested_Amount_Matches__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>mark YES if the requested amount matches the verified project amount</inlineHelpText>
    <label>Requested Amount Matches</label>
    <type>Checkbox</type>
</CustomField>