unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Requested_Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Project_Amount__c</fullName>
    <label>Requested Project Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>