unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/Stipulations__c.field-meta.xml
<CustomField>
    <fullName>Stipulations__c</fullName>
    <label>Stipulations?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>