unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/fields/System_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW__c</fullName>
    <label>System Size kW</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>