unpackaged/main/default/objects/Off_Platform_Accelerate_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requested_Project_Amount__c</columns>
    <columns>Financier__c</columns>
    <columns>Ageing__c</columns>
    <columns>Project_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>